k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: todo-tls # Le nom du secret créé pour TLS
  rules:
  - host: localhost 
    http:
      paths:
      - path: /todo-frontend/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: todo-frontend-service
            port:
              number: 80
      - path: /todo-backend/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: todo-backend-service
            port:
              number: 80
